Some initial cleanup from ordained cookiecutter boilerplate
There is more cleanup to do but these were some obvious ones.

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ include_package_data = True
 package_dir = =src
 packages = find:
 install_requires =
+    pandas
+    sidetable
     wheel
 setup_requires =
     setuptools
@@ -117,9 +119,9 @@ all =
     pytest-cov
     pytest-mock
 
-[options.entry_points]
-console_scripts =
-    bpw-pde = bpw_pde.bpw_pde:main
+#[options.entry_points]
+#console_scripts =
+#    bpw-pde = bpw_pde.bpw_pde:main
 
 [aliases]
 test = pytest
