As of blog post initial version

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,9 +24,8 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3 :: Only
-
-;keywords = ... TODO
-;license = ... TODO
+keywords = 'pandas'
+license = 'MIT'
 
 [options]
 zip_safe = False
@@ -34,8 +33,10 @@ include_package_data = True
 package_dir = =src
 packages = find:
 install_requires =
+    missingno
     pandas
     sidetable
+    tqdm
     wheel
 setup_requires =
     setuptools
@@ -45,83 +46,6 @@ where = src
 
 [bdist_wheel]
 universal = true
-
-[options.extras_require]
-api =
-    fastapi
-base =
-    debtcollector
-    humanize
-    importlib_resources; python_version < "3.7"
-    joblib
-    more-itertools
-    pluggy
-    python-dotenv
-    regex
-    requests
-    tqdm
-cli =
-    typer
-dev =
-    flake8
-    pretty_errors
-    tox
-    twine
-doc =
-    sphinx
-    sphinx_rtd_theme
-    towncrier
-gui =
-    streamlit
-nlp =
-    gensim
-    nltk
-    pyldavis
-    scattertext
-    spacy
-    stanza
-    textacy
-    wordcloud
-test =
-    pytest
-    pytest-cov
-    pytest-mock
-all =
-    debtcollector
-    humanize
-    importlib_resources; python_version < "3.7"
-    joblib
-    more-itertools
-    pluggy
-    python-dotenv
-    regex
-    requests
-    tqdm
-    fastapi
-    typer
-    flake8
-    pretty_errors
-    tox
-    twine
-    sphinx
-    sphinx_rtd_theme
-    towncrier
-    streamlit
-    gensim
-    nltk
-    pyldavis
-    scattertext
-    spacy
-    stanza
-    textacy
-    wordcloud
-    pytest
-    pytest-cov
-    pytest-mock
-
-#[options.entry_points]
-#console_scripts =
-#    bpw-pde = bpw_pde.bpw_pde:main
 
 [aliases]
 test = pytest
