setup.cfg fixes for initial PyPi upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,8 @@ author_email = bpw1621@gmail.com
 url = 'https://github.com/bpw1621/bpw-pde'
 download_url = https://github.com/bpw1621/bpw-pde/archive/master.zip
 project_urls =
-    Homepage = https://bpw1621.github.io/bpw-pde
-    Source Code = https://github.com/bpw1621/bpw-pde
     Documentation = https://bpw-pde.readthedocs.io/en/latest/
+    Source = https://github.com/bpw1621/bpw-pde
     Bug Tracker = https://github.com/bpw1621/bpw-pde/issues
 classifiers =
     Development Status :: 3 - Alpha
