setup.cfg fixes for initial PyPi upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,10 +7,9 @@ long_description = file:README.md
 long_description_content_type = text/markdown
 author = Bryan Patrick Wood
 author_email = bpw1621@gmail.com
-url = 'https://github.com/bpw1621/bpw-pde'
+url = https://github.com/bpw1621/bpw-pde
 download_url = https://github.com/bpw1621/bpw-pde/archive/master.zip
 project_urls =
-    Documentation = https://bpw-pde.readthedocs.io/en/latest/
     Source = https://github.com/bpw1621/bpw-pde
     Bug Tracker = https://github.com/bpw1621/bpw-pde/issues
 classifiers =
