Grab bag of tweaks and improvements following initial content push
* Excluded the pytest cache from indexing in the PyCharm configuration
* Added automated Sphinx documentation with sphinx-apidoc
* Fixed an unescaped single quote in the documentation configuration
* Added docstrings all over the place
* Added type hinting all over the place
* Added requirements.txt with minimal pinned requirements to the top-level, tests, and docs directories
* Moved wheel to setup_requires and added back in the test and doc extras_require
* Bump version from 0.0a0 to 0.0a1

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,15 +35,24 @@ install_requires =
     pandas
     sidetable
     tqdm
-    wheel
 setup_requires =
     setuptools
+    wheel
 
 [options.packages.find]
 where = src
 
 [bdist_wheel]
 universal = true
+
+[options.extras_require]
+test =
+    coverage
+    pytest
+doc =
+    sphinx
+    sphinx_rtd_theme
+    towncrier
 
 [aliases]
 test = pytest
