--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ url = https://github.com/bpw1621/bpw-pde
 download_url = https://github.com/bpw1621/bpw-pde/archive/master.zip
 project_urls =
     Source = https://github.com/bpw1621/bpw-pde
+    Documentation = https://bpw-pde.readthedocs.io/en/latest/
     Bug Tracker = https://github.com/bpw1621/bpw-pde/issues
 classifiers =
     Development Status :: 3 - Alpha
