A couple setup.cfg / setup.py fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = bpw_pde
 version = attr:bpw_pde.__version__
 description = Eponymous extensions to the Python pandas package.
-description-file = README.md
+description_file = README.md
 long_description = file:README.md
 long_description_content_type = text/markdown
 author = Bryan Patrick Wood
